--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -3,7 +3,7 @@
         <hr class="uk-margin-remove">
         <div class="uk-grid-large uk-flex-middle uk-margin-xlarge-top" data-uk-grid data-uk-scrollspy="cls: uk-animation-slide-bottom; repeat: true">
             <div class="uk-width-auto@m">
-                <p class="uk-text-large">{{ page.cta.title }}</p>
+                <h5 class="uk-text-large">{{ page.cta.title }}</h5>
             </div>
             <div class="uk-width-expand@m">
                 <a class="tm-button tm-button-xlarge" href="{{ domain }}{{ page.cta.button_url }}">{{ page.cta.button_text }}</a>
