--- a/_layouts/changelog.html
+++ b/_layouts/changelog.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section class="tm-margin-large-top">
+<div class="tm-margin-large-top">
     <div class="uk-container uk-container-small">
 
         <article class="uk-article">
@@ -34,4 +34,4 @@ layout: default
         </article>
 
     </div>
-</section>
+</div>
