--- a/_layouts/faq.html
+++ b/_layouts/faq.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section class="tm-margin-large-top tm-faq">
+<div class="tm-margin-large-top tm-faq">
   <div class="uk-container">
 
     <div class="uk-grid-large uk-child-width-1-2@m" data-uk-grid>
@@ -30,7 +30,7 @@ layout: default
     {% endfor %}
 
   </div>
-</section>
+</div>
 
 {% if page.cta %}
   {% include cta.html %}
