--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-            
-<section class="tm-margin-large-top">
+
+<div class="tm-margin-large-top">
     <div class="uk-container uk-container-small">
         <article class="uk-article">
 
@@ -33,4 +33,4 @@ layout: default
         </script>
 
     </div>
-</section>
+</div>
